corrected overlapping buttons in vox colorbox overlay

--- a/assets/less/elements/_vox.less
+++ b/assets/less/elements/_vox.less
@@ -17,9 +17,17 @@
 
 /* Colorbox */
 #cboxNext {
-	left: 80px;
+	left: 80px!important;
 }
 
 #cboxCurrent {
-	left: 150px;
+	left: 150px!important;
+}
+
+#cboxLoadedContent {
+	margin-bottom:50px!important;
+}
+
+#cboxTitle {
+	bottom:25px!important;
 }
